# BimodalAffectiveAlignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
checkpoints/: fer2013_finetune.json
data/: dissonant_eval_100.csv  dissonant_samples.csv
docs/: HCI_STUDY_TEMPLATE.md  REPORT_BUILD.txt  bimodal_report.bib  bimodal_report.tex  main.tex
docs/eval_output/: build_dissonant_eval.txt  dissonant_fer2013_eval.txt  dissonant_fer2013_results.json  dissonant_fer2013_results_ft.json  dissonant_results.json  dissonant_synthetic_eval.txt  fer_finetune_eval.txt  latency.txt  pytest.txt  qual_dissonant_examples.json  qual_dissonant_examples_ft.json  qual_dissonant_table.tex  qual_dissonant_table_ft.tex  qual_examples.json  qual_examples_ft.json  qual_table.tex  qual_table_ft.tex  results.json  results_ft.json  table.tex  table_ft.tex
scripts/: benchmark_latency.py  build_dissonant_eval_csv.py  build_dissonant_qualitative_table.py  build_qualitative_table.py  check_training_env.py  eval_dissonant_fer2013.py  eval_fer_checkpoint.py  finetune_fer2013.py  run_ablation.py  run_evaluation.py
src/bimodal_empathy/: __init__.py  config.py  emotion_mapping.py  fer_finetune_ckpt.py  fusion.py  response_synthesizer.py  text_sensor.py  vision_sensor.py
src/bimodal_empathy/eval/: __init__.py  benchmarks.py  fer2013_test_iter.py
tests/: test_fusion.py  test_mapping.py
